fix to grasdient not covering

--- a/css/frontpage.scss
+++ b/css/frontpage.scss
@@ -71,7 +71,7 @@
   text-decoration: none;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 101%;
 }
 .view-frontpage .is-promoted h2 a span{
   position: absolute;
